fixed alignment for links

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -36,6 +36,7 @@ a {
 
 ul {
   list-style-type: none;
+  display:flex;
 }
 
 .left-items {
